# Network-Analysis

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.agents/skills/dataset-vetting/: SKILL.md
.agents/skills/flow-sampling-evaluator/: SKILL.md
.agents/skills/local-pipeline-dev/: SKILL.md
.agents/skills/pipeline-refactor/: SKILL.md
.agents/skills/result-writeup/: SKILL.md
configs/: dataset_template.yaml  datasets.batch.yaml  demo.pipeline.yaml  pipeline.sample.yaml  run_conf.yaml
docs/: pipeline-mvp.md
docs/frozen/: pipeline-mvp.md
docs/hot/: git-workflow.md  pipeline-v2.md
docs/modules/dataset_registry/: CHANGELOG.md  Maintenance.md  README.md
docs/modules/driver/: CHANGELOG.md  Maintenance.md  README.md
docs/modules/flow_construction/: CHANGELOG.md  Maintenance.md  README.md
docs/practical/: config-yamls.md
docs/specs/: pipeline-mvp.md
scripts/: create_demo_capture.py  run_dataset_batches.py  run_dataset_batches.sh  run_pipeline.py
src/network_analysis/: __init__.py  __main__.py  artifacts.py  base.py  batch_cli.py  batch_runner.py  cli.py  config.py  dataset_registry.py  driver.py  flow_construction.py  ingest.py  metrics.py  packet_extraction.py  plotting.py  runtime.py  sampling.py  schemas.py
tests/: conftest.py  support.py  test_batch_config.py  test_batch_runner.py  test_cli.py  test_config.py  test_driver_end_to_end.py  test_flow_construction.py  test_metrics.py  test_packet_extraction.py  test_plotting.py  test_runtime.py  test_sampling.py  test_v2_config.py
tests/demo/: README.md
(+50 files in other folders)
