[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-analysis-pipeline"
version = "0.1.0"
description = "Local-first modular pipeline for packet-trace sampling evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dpkt>=1.9.8",
  "polars>=1.30.0",
  "PyYAML>=6.0",
]

[project.scripts]
network-analysis = "network_analysis.cli:main_entry"
network-analysis-batch = "network_analysis.batch_cli:main_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
